adding different styles

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,14 +9,14 @@ const links2 = [
 ];
 ---
 <!------------------------------- HEADER ------------------------------->
-<header class="h-[50vh] bg-black text-center flex items-center justify-center gap-20 shadow-md">
+<header class="h-[50vh] bg-creme text-center flex items-center justify-center gap-20 shadow-md">
   
   <!-------- Navigation part one -------->
   <nav class="space-x-6 w-56 uppercase">
     {links1.map(link => (
       <a 
         href={link.href} 
-        class="text-white text-2xl hover:text-amber-100 transition font-medium"
+        class="text-olive text-2xl hover:text-amber-100 transition font-medium"
       >
         {link.name}
       </a>
@@ -33,7 +33,7 @@ const links2 = [
     {links2.map(link => (
       <a 
         href={link.href} 
-        class="text-white text-2xl hover:text-amber-100 transition font-medium"
+        class="text-olive text-2xl hover:text-amber-100 transition font-medium"
       >
         {link.name}
       </a>
