--- a/src/components/ImageBanner.astro
+++ b/src/components/ImageBanner.astro
@@ -16,15 +16,15 @@ const {
   </div>
 
   <div class="relative z-10 max-w-4xl mx-auto text-center">
-    <h1 class="text-5xl font-bold text-bright-brown"> <!--- Image text --->
+    <h1 class="text-5xl font-bold text-olive"> <!--- Image text --->
       {title}
     </h1>
-    <p class="mt-4 text-xl uppercase text-gray-700"> <!--- Image paragraph --->
+    <p class="mt-4 text-xl uppercase"> <!--- Image paragraph --->
       {text}
     </p>
  
-    <!-------- Button-------->
-    <a href="/kontakt" class="mt-6 inline-block uppercase bg-white text-bright-brown px-6 py-3 rounded-lg hover:bg-forest-light hover:text-white transition">
+    <!-------- Button--------> 
+    <a href="/kontakt" class="mt-6 inline-block uppercase bg-white text-bright-brown px-6 py-3 rounded-lg hover:bg-olive hover:text-white transition">
       {buttonText}
     </a>
 
