--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -20,7 +20,8 @@
   --color-forest: #778c72;
   --color-forest-light: #cbd7c9;
   --color-bright-brown: #847949;
-  --color-gold: #D8C076;
+  --color-beige-1: #FAF1DE;
+  --color-olive: #847949;
 
   --font-serif: "Cormorant Garamond", serif;
 }
