adding header styles

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -16,7 +16,7 @@ const links2 = [
     {links1.map(link => (
       <a 
         href={link.href} 
-        class="text-olive text-2xl hover:text-amber-100 transition font-medium"
+        class="text-olive text-2xl hover:text-beige transition font-medium"
       >
         {link.name}
       </a>
@@ -33,7 +33,7 @@ const links2 = [
     {links2.map(link => (
       <a 
         href={link.href} 
-        class="text-olive text-2xl hover:text-amber-100 transition font-medium"
+        class="text-olive text-2xl hover:text-beige transition font-medium"
       >
         {link.name}
       </a>
