made some upgrades

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@ const currentYear = new Date().getFullYear();
 ---
 
 <!------------------------------- FOOTER ------------------------------->
-<footer class="bg-black text-white p-8">
+<footer class="bg-creme shadow-md-top text-white p-8">
 
   <!------------------------------- Logo footer ------------------------------->
   <div class="max-w-[95%] mx-auto mb-8 border-b border-amber-400 pb-4 flex justify-center md:justify-end">
@@ -16,20 +16,20 @@ const currentYear = new Date().getFullYear();
    <div class="flex">  
 
       <!-------- Navigation -------->
-      <div class="mr-24 uppercase">
+      <div class="mr-24 uppercase text-olive">
         <ul class="mt-2 space-y-1">
-          <li><a href="/" class="hover:text-amber-100"> Hem </a></li>
-          <li><a href="/tjanster" class="hover:text-amber-100"> Butik </a></li>
-          <li><a href="/om-oss" class="hover:text-amber-100"> Gläntan </a></li>
-          <li><a href="/kontakta-oss" class="hover:text-amber-100"> Kontakt </a></li>
+          <li><a href="/" class="hover:text-beige"> Hem </a></li>
+          <li><a href="/tjanster" class="hover:text-beige"> Butik </a></li>
+          <li><a href="/om-oss" class="hover:text-beige"> Gläntan </a></li>
+          <li><a href="/kontakta-oss" class="hover:text-beige"> Kontakt </a></li>
         </ul>
       </div>
 
       <!-------- Contact info -------->
-      <div class="mt-2 uppercase">
-        <h3 class="mt-2text-white"> Kontakt </h3>
-        <p class="mt-2 text-gray-400"> info@glantan.se </p>
-        <p class="text-gray-400"> +46 70 123 45 67 </p>
+      <div class="mt-2 uppercase text-olive">
+        <h3 class="mt-2 "> Kontakt </h3>
+        <p class="mt-2"> info@glantan.se </p>
+        <p class=""> +46 70 123 45 67 </p>
         
         <!-------- Instagram -------->
         <div class="flex space-x-4 mt-4">
@@ -52,7 +52,7 @@ const currentYear = new Date().getFullYear();
 
     <!-------- Final text -------->
     <div class="text-left md:text-right mt-8 md:mt-0">
-      <h3 class="text-lg font-semibold text-white uppercase">Gläntan.</h3>
+      <h3 class="text-lg font-semibold text-white uppercase"> Gläntan. </h3>
       <p class="mt-2 text-gray-400"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam, illum! Quas animi temporibus ipsam nisi modi molestiae voluptas, magnam placeat sit molestias. Voluptas, nesciunt pariatur! Quisquam accusamus corporis ducimus accusantium!  </p>
     </div>
 
