--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -147,7 +147,7 @@ import ImageBanner from "../components/ImageBanner.astro";
   </section>
 
   <!-------- Call to action -------->
-  <section class="py-16 bg-beige text-center max-w-[90%] mx-auto mb-16">
+  <section class="py-16 bg-[#FAF1DE] text-center max-w-[90%] mx-auto mb-16">
 
     <h2 class="text-3xl font-bold mb-4 uppercase"> Har vi inte din vara i vårt sortiment? </h2>
     <p class="mb-6 text-xl uppercase font-thin text-gray-700"> Skriv till oss så ser vi om vi kan lösa det. </p>
