--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,14 +14,20 @@
     rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
 
+.shadow-md-top {
+   box-shadow:
+    rgba(0, 0, 0, 0.1) 0px -3px 6px -1px,
+    rgba(0, 0, 0, 0.1) 0px -1px 4px -2px,
+    rgba(0, 0, 0, 0.2) 0px -2px 0px inset;
+    
+}
+
 @theme {
   --color-beige: #ede8e8;
   --color-creme: #f8f6f6;
   --color-forest: #778c72;
-  --color-forest-light: #cbd7c9;
-  --color-bright-brown: #847949;
-  --color-beige-1: #FAF1DE;
   --color-olive: #847949;
+  --color-beige-1: #FAF1DE;
 
   --font-serif: "Cormorant Garamond", serif;
 }
