--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -25,7 +25,7 @@ const links2 = [
 
   <!-------- Logo -------->
   <a href="/" class="mb-10">
-    <img src="/images/glantan-logga.jpg" alt="Gläntans djur och natur" class="h-60 w-auto"/>
+    <img src="/images/logo-round.png" alt="Gläntans djur och natur" class="h-60 w-auto"/>
   </a>
 
   <!-------- Navigation part two -------->
